Rewrite DefaultMethodInvoker